2019-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc,
	  src/pdk/peeph.def:
	  Fixes for on-stack operands.

2019-09-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Fixes for on-stack operands.

2019-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix wide load via pointer with register result in ahl.

2019-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fixes for on-stack operands.

2019-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve handling of stack operands.

2019-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Various improvements.
	* device/lib/_fseq.c:
	  Refactor to reduce RAM use.

2019-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve handling of stack operands.

2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix handling of stack operands in right shift.

2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Transition proposed idxsp to proposed mov variant.

2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Disable use of proposed instructions by default.

2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Improve push.

2019-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve use of proposed sp-relative addressing mode.

2019-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve use of proposed sp-relative addressing mode.

2019-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve subtraction flexibility.

2019-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Use proposed sp-relative addressing mode (depending on feature macro).

2019-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/SDCCsalloc.hpp,
	  src/pdk/ralloc.c,