@@ -1,3 +1,8 @@
+2019-09-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
+	  Improve handling of on-stack operands.
+
 2019-09-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c,
